Correction du menu version mobile. Correction des buttons en responsible.

--- a/content/themes/production2/styles/sass/_base.sass
+++ b/content/themes/production2/styles/sass/_base.sass
@@ -15,6 +15,7 @@ h2
 	color: $color-red!important
 	font-size: 30px!important
 	font-weight: $bold!important
+	text-align: center
 
 h3
 	font: 100% $font-title!important
@@ -35,23 +36,25 @@ p
 	border-radius:         $radius
 
 .btn-savoir
-	font: 100% $font-title!important
-	font-weight: $bold!important
+	font: 100% $font-title
+	font-weight: $bold
 	background-color: $color-red
 	color: $color-white
-	padding: 20px 20px!important
-	font-size: 17px!important
+	padding: 20px 20px
+	font-size: 17px
 	text-transform: uppercase
 	letter-spacing: $title-letter-spacing
 	+border-radius(3px)
-
+	&:hover
+		background-color: $color-red-hover
+		color: $color-white
+		text-decoration: none
+		transition: $transition
 button
 	border-style: none
+	text-decoration: none
 
-.btn-savoir:hover
-	background-color: $color-red-hover
-	color: $color-white!important
-	transition: $transition
+
 
 #logo
 	font: 100% $font-title
